--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "homepage": "https://github.com/Jrivenburgh/burger/#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.15.2",
+    "connection.js": "0.0.2",
+    "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.8",
-    "mysql": "^2.13.0"
+    "mysql": "^2.16.0"
   }
 }
